<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="temperature_check"
        android:summary="@string/pref_description_temerature_setting"
        android:title="@string/pref_title_temperature" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:dependency="temperature_check"
        android:capitalize="words"
        android:defaultValue="@string/pref_default_min_temperature"
        android:inputType="textCapWords"
        android:key="min_temperature"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_min_temperature" />

    <EditTextPreference
        android:dependency="temperature_check"
        android:capitalize="words"
        android:defaultValue="@string/pref_default_max_temperature"
        android:inputType="textCapWords"
        android:key="max_temperature"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_max_temperature" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--<ListPreference-->
        <!--android:defaultValue="-1"-->
        <!--android:entries="@array/pref_example_list_titles"-->
        <!--android:entryValues="@array/pref_example_list_values"-->
        <!--android:key="example_list"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null"-->
        <!--android:title="@string/pref_title_add_friends_to_messages" />-->

</PreferenceScreen>
