<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="rate_check"
        android:title="@string/pref_title_rate"
        android:summary="@string/pref_descrption_rate_setting"/>

    <EditTextPreference
        android:dependency="rate_check"
        android:capitalize="words"
        android:defaultValue="@string/pref_default_min_rate"
        android:inputType="textCapWords"
        android:key="min_rate"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_min_rate" />

    <EditTextPreference
        android:dependency="rate_check"
        android:capitalize="words"
        android:defaultValue="@string/pref_default_max_rate"
        android:inputType="textCapWords"
        android:key="max_rate"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_max_rate" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <!--<RingtonePreference-->
        <!--android:defaultValue="content://settings/system/notification_sound"-->
        <!--android:dependency="notifications_new_message"-->
        <!--android:key="notifications_new_message_ringtone"-->
        <!--android:ringtoneType="notification"-->
        <!--android:title="@string/pref_title_ringtone" />-->

    <!--&lt;!&ndash; NOTE: This preference will be enabled only when the checkbox above is checked. &ndash;&gt;-->
    <!--<SwitchPreference-->
        <!--android:defaultValue="true"-->
        <!--android:dependency="notifications_new_message"-->
        <!--android:key="notifications_new_message_vibrate"-->
        <!--android:title="@string/pref_title_vibrate" />-->

</PreferenceScreen>
