<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--<ListPreference-->
        <!--android:defaultValue="180"-->
        <!--android:entries="@array/pref_sync_frequency_titles"-->
        <!--android:entryValues="@array/pref_sync_frequency_values"-->
        <!--android:key="sync_frequency"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null"-->
        <!--android:title="@string/pref_title_sync_frequency" />-->

    <!--&lt;!&ndash; This preference simply launches an intent when selected. Use this UI sparingly, per-->
         <!--design guidelines. &ndash;&gt;-->
    <!--<Preference android:title="@string/pref_title_system_sync_settings">-->
        <!--<intent android:action="android.settings.SYNC_SETTINGS" />-->
    <!--</Preference>-->

    <SwitchPreference
        android:defaultValue="true"
        android:key="uv_check"
        android:summary="@string/pref_description_uv_setting"
        android:title="@string/pref_title_uv" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:dependency="uv_check"
        android:capitalize="words"
        android:defaultValue="@string/pref_default_uv_point"
        android:inputType="textCapWords"
        android:key="uv_point"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_uv_point" />


</PreferenceScreen>
